--- a/action.yml
+++ b/action.yml
@@ -13,13 +13,42 @@ inputs:
   sarif_out:
     description: "Output SARIF path"
     default: "iacsec.sarif"
+  formats:
+    description: "Comma separated formats (sarif,json,table)"
+    default: "sarif,json"
+  model_cache:
+    description: "Override model cache directory"
+    default: "${{ runner.temp }}/iacsec-model-cache"
 runs:
   using: "composite"
   steps:
     - shell: bash
-      run: pipx install ".[dev]" || pip install -e .
-    - shell: bash
       run: |
+        set -euo pipefail
+        python -m pip install --upgrade pip
+        python -m pip install -e .
+    - shell: bash
+      env:
+        FORMATS: "${{ inputs.formats }}"
+      run: |
+        set -euo pipefail
+        export IACSEC_MODEL_CACHE="${{ inputs.model_cache }}"
         python -m iacsec.models.fetch "${{ inputs.postfilter }}"
-        iacsec scan --path "${{ inputs.path }}" --tech "${{ inputs.tech }}" \
-          --postfilter "${{ inputs.postfilter }}" --format sarif --out "${{ inputs.sarif_out }}"
+        mapfile -t formats < <(python - <<'EOF'
+import os
+formats = [f.strip() for f in os.environ['FORMATS'].split(',') if f.strip()]
+print('
+'.join(formats))
+EOF
+        )
+        cmd=(iacsec scan --path "${{ inputs.path }}" --tech "${{ inputs.tech }}"               --postfilter "${{ inputs.postfilter }}" --out "${{ inputs.sarif_out }}")
+        for fmt in "${formats[@]}"; do
+          cmd+=(--format "$fmt")
+        done
+        echo "Running: ${cmd[*]}"
+        if ! "${cmd[@]}"; then
+          status=$?
+          if [ "$status" -ne 1 ]; then
+            exit "$status"
+          fi
+        fi
