--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
   "pyyaml>=6.0",
   "ruamel.yaml>=0.17",
   "puppetparser>=0.2",
+  "transformers>=4.45",
 ]
 
 [project.scripts]
@@ -31,7 +32,7 @@ iacsec = "apps.cli.main:app"
 package-dir = {"" = ""}
 
 [tool.setuptools.packages.find]
-include = ["apps*", "packages*"]
+include = ["apps*", "packages*", "iacsec*"]
 exclude = ["packages.glitch_core.tests*", "packages.glitch_core.docs*"]
 
 [tool.pytest.ini_options]
