--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
   "rich>=13.7",
   "safetensors>=0.4",
   "ply>=3.11",
-  "torch>=2.2; platform_system!='Darwin' or platform_machine!='arm64'",
+  "torch>=2.2",
   "pyyaml>=6.0",
   "ruamel.yaml>=0.17",
   "puppetparser>=0.2",
