--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "iacsec scan (pilot)"
+name: "intellisa scan (pilot)"
 description: "IaC security scanner using rule-based detection and neural inference"
 inputs:
   path:
@@ -12,13 +12,13 @@ inputs:
     default: "IntelliSA-220m"
   sarif_out:
     description: "Output SARIF path"
-    default: "iacsec.sarif"
+    default: "intellisa.sarif"
   formats:
     description: "Comma separated formats (sarif,json,table)"
     default: "sarif,json"
   model_cache:
     description: "Override model cache directory"
-    default: "${{ runner.temp }}/iacsec-model-cache"
+    default: "${{ runner.temp }}/intellisa-model-cache"
 runs:
   using: "composite"
   steps:
@@ -36,6 +36,6 @@ runs:
         INPUT_SARIF_OUT: "${{ inputs.sarif_out }}"
       run: |
         set -euo pipefail
-        export IACSEC_MODEL_CACHE="${{ inputs.model_cache }}"
-        python -m iacsec.models.fetch "${{ inputs.postfilter }}"
+        export INTELLISA_MODEL_CACHE="${{ inputs.model_cache }}"
+        python -m intellisa.models.fetch "${{ inputs.postfilter }}"
         python scripts/run_action_scan.py
