--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "iacsec"
+name = "intellisa"
 version = "0.1.0"
 description = "IntelliSA: IaC security scanner with rule-based detection and neural inference"
 readme = "README.md"
@@ -30,10 +30,10 @@ onnx = [
 ]
 
 [project.scripts]
-iacsec = "apps.cli.main:app"
+intellisa = "apps.cli.main:app"
 
 [tool.setuptools.packages.find]
-include = ["apps*", "packages*", "iacsec*"]
+include = ["apps*", "packages*", "intellisa*"]
 exclude = ["packages.glitch_core.tests*", "packages.glitch_core.docs*"]
 
 [tool.pytest.ini_options]
